# firesale

./: Cargo.toml
src/: api.rs  entrypoint.rs  error.rs  errors.rs  firesale.rs  firestore.rs  lib.rs  main.rs
